# CoreTemplate

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  CoreTest.pro  PULL_REQUEST_TEMPLATE.md  README.md  README_RU.md  core.h
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
cmake/: CoreTemplateConfig.cmake.in
example/: CMakeLists.txt  console_main.cpp  example_app.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: CMakeLists.txt  README.md  core_tests.cpp  core_tests.pro
tests/package_smoke/: CMakeLists.txt  main.cpp
